syntax = "proto3";

package tg;

option go_package = "generated/tgpb";

service TgService {
  rpc DownloadVideoStream (DownloadVideoStreamRequest) returns (stream DownloadVideoStreamResponse);
}

message DownloadVideoStreamRequest {
  string url = 1;
}

message DownloadVideoStreamResponse {
  oneof data {
    string filename = 1;
    bytes chunk = 2;
  }
}
